<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="zeroButton">0</string>
    <string name="mulButton">"\u00D7"</string>
    <string name="clearButton">c</string>
    <string name="allclearButton">ac</string>
    <string name="divButton">"\u00F7"</string>
    <string name="signButton">"\u00B1"</string>
    <string name="plusButton">+</string>
    <string name="minusButton">—</string>
    <string name="commaButton">.</string>
    <string name="equalButton">=</string>
    <string name="sqrtButton">\u221A</string>
    <string name="del">"\u232B"</string>
</resources>